[package]
name = "connect4"
version = "0.1.1"
edition = "2024"
default-run = "connect4-tui"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"
opt-level = 3

[profile.release-debug]
inherits = "release"
debug = "full"

[lints.clippy]
all = "deny"
pedantic = "deny"

[features]
default = ["tui"]
tui = ["dep:color-eyre", "dep:crossterm", "dep:ratatui", "dep:clap"]
tools = ["dep:rayon"]

[dependencies]
rand = "0.10.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
postcard = { version = "1.1", features = ["use-std"] }
socket2 = { version = "0.6", features = ["all"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
network-interface = "2.0"
thiserror = "2.0"

# Optional dependencies
rayon = { version = "1.10", optional = true }
color-eyre = { version = "0.6.5", optional = true }
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bin]]
name = "connect4-tui"
path = "src/main.rs"
required-features = ["tui"]

[[bin]]
name = "bench-ai"
path = "src/bin/bench_ai.rs"

[[bin]]
name = "sim-ai"
path = "src/bin/sim_ai.rs"
required-features = ["tools"]

[[bin]]
name = "tune-ai"
path = "src/bin/tune_ai.rs"
required-features = ["tools"]

[[bin]]
name = "profile-ai"
path = "src/bin/profile_ai.rs"

[[bench]]
name = "ai-search"
path = "benches/ai_search.rs"
harness = false
